# rookieRetrievalSystem

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
documents/: LAB_PROGRESSION.md  sample3.txt  sample4.txt
src/retrieval/: embeddings.py  hybrid.py  llm.py  loader.py  main.py  rag.py  reranker.py  retriever.py  store.py
static/: index.html  playground.html  playground.js  search.js  style.css
tests/: test_chunking.py  test_embeddings.py  test_hybrid.py  test_integration.py  test_llm.py  test_loader.py  test_p2_hybrid.py  test_p2_reranking.py  test_rag.py  test_reranker.py  test_retriever.py  test_smoke.py  test_store.py
