[project]
name = "retrieval"
version = "1.0.0"
description = "Lab 3 in ARIN 5360: setting up our document retrieval system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.4",
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "openai>=2.22.0",
    "pydantic>=2.12.4",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/retrieval",       # always look for coverage just in these files 
    "--cov-report=term-missing", # always report which code lines are uncovered (instead of only count)
    "--cov-report=html",         # make the report pretty to look at
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]    # Just errors, pyflakes, and imports
ignore = ["E501"]           # Formatter handles line length

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]        # Allow unused imports in tests

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
